--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,34 @@
+# Application Name
 spring.application.name=pinpoint
 
+# Server Configuration
+server.port=8070
 
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/codexist.pinpoint
+spring.datasource.username=${DB_USERNAME://}
+spring.datasource.password=${DB_PASSWORD://}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# Security Configuration
+spring.security.user.name=admin
+spring.security.user.password=admin
+
+# Google Places API Configuration
+#google.places.api-key=${//}
+#google.places.base-url=https://maps.googleapis.com/maps/api/place/nearbysearch/json
+
+# JWT Configuration
+jwt.secret=${JWT_SECRET: //}
+jwt.expiration=86400000
+
+# Rate Limiting Configuration
+rate-limit.capacity=100
+rate-limit.refill-tokens=100
+rate-limit.refill-duration-minutes=60
