--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.security.user.name=admin
 spring.security.user.password=admin
 
-# Google Places API Configuration
-#google.places.api-key=${//}
-#google.places.base-url=https://maps.googleapis.com/maps/api/place/nearbysearch/json
+# Google Maps API Configuration
+google.maps.api-key=${//}
+google.maps.base-url=https://maps.googleapis.com/maps/api/place/nearbysearch/json
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET: //}
